pagination alignment fix

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -354,6 +354,7 @@ ol.paginationContainer {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	padding-inline: 20px;
 }
 
 svg.pagination {
